Fix review issues: null safety, dead code, pattern caching, perf
- #3: Replace deprecated new URL() with URI.create().toURL()
- #5: Pass release list into validateRelease to avoid redundant S3 call
- #6: Make build marker regex patterns static final constants
- #9: Remove unused intArg method
- #11: Remove unused build_number from makeRelease
- #13: Remove unused server variable
- #14: Add null checks for edition and obj_name

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>